--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ crate-type = ["cdylib"]
 numpy = "0.11.0"
 ndarray = "0.13"
 num-traits = "0.2"
+paste = "1.0"
 
 [dependencies.pyo3]
 version = "0.11.1"
