move other language bindings into their own packages

--- a/R/src/Makefile
+++ b/R/src/Makefile
@@ -1,5 +1,5 @@
 all:
-	cargo build --release --features r --manifest-path=../Cargo.toml
+	cargo build --release --manifest-path=../Cargo.toml
 	cp ../target/release/rslc.so .
 	cp ../target/release/rslc.dll .
 	cp ../target/release/rslc.dylib .
