--- a/R/Cargo.toml
+++ b/R/Cargo.toml
@@ -1,9 +1,13 @@
 [package]
-name = "rslc"
+name = "r_rslc"
 version = "0.3.0"
 authors = ["Aggrathon <antonbjo@gmail.com>"]
 edition = "2018"
 
+[lib]
+name = "rslc"
+crate-type = ["dylib"]
+
 [dependencies]
-ndarray = "0.13"
-num-traits = "0.2"
+rslc = { path = ".." }
+extendr-api = "0.1.2"
