--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,5 @@ authors = ["Aggrathon <antonbjo@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-ndarray = "0.13"
+ndarray = {version = "0.13", features = ["rayon"]}
 num-traits = "0.2"
