--- a/R/DESCRIPTION
+++ b/R/DESCRIPTION
@@ -1,11 +1,16 @@
 Package: rslc
 Type: Package
-Title: What the Package Does in One 'Title Case' Line
+Title: Robust Single-Linkage Clustering
 Version: 1.0
 Date: 2020-09-28
-Author: Your Name
-Maintainer: Your Name <your@email.com>
-Description: One paragraph description of what the package does as one or more full sentences.
-License: GPL (>= 2)
+Author: Aggrathon
+Maintainer: Aggrathon <antonbjo@gmail.com>
+URL: https://github.com/Aggrathon/rslc/
+Description: Robust Single-Linkage Clustering is a robust variant of single-linkage (hierarchical) clustering that can handle outliers through a minimum cluster size.
+License: MIT + file LICENSE
+Encoding: UTF-8
 Imports: Rcpp (>= 1.0.1)
 LinkingTo: Rcpp
+RoxygenNote: 6.1.1
+Suggests:
+    testthat
